--- a/22-21.Juni/lit.bib
+++ b/22-21.Juni/lit.bib
@@ -5,3 +5,10 @@
   month = 05,
   address = {http://129.217.224.2/HOMEPAGE/PHYSIKER/BACHELOR/AP/SKRIPT/V704.pdf},
 }
+
+@manual{Kupfer,
+  title = {Molvolumen},
+  year = 2016,
+  month = 05,
+  address = {http://www.internetchemie.info/chemiewiki/index.php?title=Molvolumen},
+}
