--- a/22-21.Juni/content/auswertung.tex
+++ b/22-21.Juni/content/auswertung.tex
@@ -170,7 +170,7 @@ Mittels dem Schnittpunkt von zwei Linearen Fitts der From \eqref{eqn:fit} wird d
 \end{equation}
 Aus der Maximalen Massenbelgung wird die freiwerdende Gesamtenergie mittels Formel \eqref{eqn:} berechnet und beträgt
 \begin{equation}
-  E_\text{max} = \num{1.4 +- 0.1} \, \text{MeV}
-  \label{}
+  E_\text{max} = \num{0.26 +- 0.2} \, \text{MeV}
+  \label{eqn:max}
 \end{equation}
 berechnet.
