--- a/22-21.Juni/lit.bib
+++ b/22-21.Juni/lit.bib
@@ -10,5 +10,13 @@
   title = {Molvolumen},
   year = 2016,
   month = 05,
+  address = {http://www.internetchemie.info/chemiewiki/index.php},
+}
+
+@manual{wiki,
+  author = {René Rausch},
+  title = {Das Periodensystem der Elemente Online},
+  year = 2016,
+  month = 05,
   address = {http://www.internetchemie.info/chemiewiki/index.php?title=Molvolumen},
 }
