--- a/22-21.Juni/header.tex
+++ b/22-21.Juni/header.tex
@@ -84,11 +84,13 @@
   font=small,          % Schrift etwas kleiner als Dokument
   width=0.9\textwidth, % maximale Breite einer Caption schmaler
 ]{caption}
+
 % subfigure, subtable, subref
 \usepackage{subcaption}
 
 % Grafiken können eingebunden werden
 \usepackage{graphicx}
+
 % größere Variation von Dateinamen möglich
 \usepackage{grffile}
 
@@ -133,3 +135,11 @@
   }{}%
 }
 \publishers{TU Dortmund – Fakultät Physik}
+
+\usepackage{colortbl} %ermöglicht das färben von Tabellen
+
+\usepackage{xcolor} %fügt mehr farben hinzu
+
+\usepackage{multirow} %ermöglicht Zeilen in Tabellen zu verbinden
+
+\usepackage{upgreek}
