--- a/22-21.Juni/content/auswertung.tex
+++ b/22-21.Juni/content/auswertung.tex
@@ -2,7 +2,7 @@
 \label{sec:Auswertung}
 \subsection{\texorpdfstring{$\gamma$ -Strahlung }%
                                {gamma -Strahlung}}
-Die Nullmessung ohne radiaktives Präperat ergibt eine Hintergrundstrahlung von 
+Die Nullmessung ohne radioaktives Präperat ergibt eine Hintergrundstrahlung von
 \begin{equation}
   (\num{800 +- 30}) \text{ counts in } 900 \text{s} \ .
   \label{eqn:gammacoun}
@@ -12,7 +12,7 @@ Normiert man diese Impulszahl auf die Zählrate ergibt sich die Nullaktivität $
   A_0 = (\num{0.89 +- 0.03}) \, \text{cps} \ .
   \label{eqn:A0}
 \end{equation}
-Im weiteren Verlauf werden von den gemessenene Messwerten die Zählraten der Hintergrund abgezogen. Die gemessenen Impulsraten in Abhängigkeit der Abschirmdicke für Blei, sind in Tabelle \ref{tab:ABlei} aufgetragen, sowie die bereinigte Zählrate.
+Im weiteren Verlauf wird von den gemessenenen Messwerten die Hintergrundzählrate abgezogen. Die gemessenen Impulsraten in Abhängigkeit der Abschirmdicke für Blei, sind in Tabelle \ref{tab:ABlei} aufgetragen, sowie die bereinigte Zählrate.
 \begin{table}
   \centering
   \begin{tabular}{c c c c}
@@ -39,17 +39,17 @@ Im weiteren Verlauf werden von den gemessenene Messwerten die Zählraten der Hin
   \caption{Aktivität nach Abschirmung durch Blei}
   \label{tab:ABlei}
 \end{table}
-In Diagramm \ref{fig:Blei} wird der Massenbelegung gegen die auf die logarithmierte y-Achse Zählrate aufgetragen. Anhand eines Fittes der Form 
+In Diagramm \ref{fig:Blei} wird die Massenbelegung auf der x-Achse gegen die Zählrate auf der logarithmierten y-Achse aufgetragen. Anhand eines Fittes der Form
 \begin{equation}
-  y_\text{fit} = \text{exp}(a \cdot x + b) 
+  y_\text{fit} = \text{exp}(a \cdot x + b)
   \label{eqn:fit}
-\end{equation} 
-wird ein Absorbtionskoeffizient µ von 
+\end{equation}
+wird ein Absorbtionskoeffizient µ von
 \begin{equation}
   \mu_\text{Blei} = (\num{106 +- 2}) \frac{1}{m}
   \label{eqn:absK}
 \end{equation}
-ermittelt so wie eine Anfangsaktivität $N(0)$ von 
+ermittelt so wie eine Anfangsaktivität $N(0)$ von
 \begin{equation}
   N_\text{Blei}(0) = \num{148 +- 6} \ .
   \label{eqn:NBlei}
@@ -65,36 +65,36 @@ Der mittels Formel \ref{eqn:} und \ref{eqn:} berechnet Compton-Absorptionskoeffi
   \mu_\text{com} = 68.14 \, \frac{1}{\text{m}} \ .
   \label{eqn:}
 \end{equation}
-Bei der berechnung wurde eine Molvolumen von 18.26 $\text{cm}^3 / \text{mol}^{-1}$ (\cite{Kupfer}) angenommen.
-Die gemessenen Werte für Kupfer und die Zählrate sind in Tabelle \ref{tab:AKupfer} aufgetragen. Der Absorbtionskoeffizient sowie die Anfangsaktivität wird analog zum Blei aus den Fitts in Abbildung \ref{fig:Kupfer} berechnet. 
+Bei der Berechnung wurde eine Molvolumen von 18.26 $\text{cm}^3\text{mol}^{-1}$ (\cite{Kupfer}) angenommen.
+Die gemessenen Werte für Kupfer und die Zählrate sind in Tabelle \ref{tab:AKupfer} aufgetragen. Der Absorbtionskoeffizient sowie die Anfangsaktivität wird analog zum Blei aus den Fitts in Abbildung \ref{fig:Kupfer} berechnet.
 \begin{table}
   \centering
   \begin{tabular}{c c c c}
     \toprule
     Dicke d / $10^{-3}$ m & Zeit t / s & Zählrate N & Aktivität A / $\frac{1}{s}$ \\
     \midrule
-    0.5		&40	&5484&	\num{140 +- 10} \\	
-    1.0		&40	&5459&	\num{140 +- 10} \\	
-    1.5		&40	&5314&	\num{130 +- 10} \\	
-    2.0		&40	&4413&	\num{110 +- 10} \\	
-    2.5		&40	&5168&	\num{130 +- 10} \\	
-    3.1		&40	&4982&	\num{120 +- 10} \\	
-    3.6		&40	&4682&	\num{120 +- 10} \\	
-    4.1		&40	&4351&	\num{110 +- 10} \\	
-    5.0		&40	&4498&	\num{110 +- 10} \\	
-    5.5		&40	&4165&	\num{100 +- 10} \\	
-    6.0		&40	&4383&	\num{110 +- 10} \\	
-    6.5		&40	&4192&	\num{100 +- 10} \\	
-    7.0		&40	&4444&	\num{110 +- 10} \\	
-    8.1		&40	&4169&	\num{100 +- 10} \\	
-    10.0	&40	&3475&	\num{90 +- 10} \\	
-    13.1	&40 	&2784&	\num{70 +- 9} \\   	  
-    18.1	&40	&2183&	\num{55 +- 8} \\	
-    20.0	&40	&2246&	\num{56 +- 7} \\	
-    30.0	&40 	&1319&	\num{34 +- 6} \\	     
-    40.0    	&40 	&719&	\num{18 +- 4} \\	 
-    50.0    	&40 	&601&	\num{15 +- 4} \\	 
-    60.0	&40 	&328&	\num{8 +- 3} \\	 
+    0.5		&40	&5484&	\num{140 +- 10} \\
+    1.0		&40	&5459&	\num{140 +- 10} \\
+    1.5		&40	&5314&	\num{130 +- 10} \\
+    2.0		&40	&4413&	\num{110 +- 10} \\
+    2.5		&40	&5168&	\num{130 +- 10} \\
+    3.1		&40	&4982&	\num{120 +- 10} \\
+    3.6		&40	&4682&	\num{120 +- 10} \\
+    4.1		&40	&4351&	\num{110 +- 10} \\
+    5.0		&40	&4498&	\num{110 +- 10} \\
+    5.5		&40	&4165&	\num{100 +- 10} \\
+    6.0		&40	&4383&	\num{110 +- 10} \\
+    6.5		&40	&4192&	\num{100 +- 10} \\
+    7.0		&40	&4444&	\num{110 +- 10} \\
+    8.1		&40	&4169&	\num{100 +- 10} \\
+    10.0	&40	&3475&	\num{90 +- 10} \\
+    13.1	&40 	&2784&	\num{70 +- 9} \\
+    18.1	&40	&2183&	\num{55 +- 8} \\
+    20.0	&40	&2246&	\num{56 +- 7} \\
+    30.0	&40 	&1319&	\num{34 +- 6} \\
+    40.0    	&40 	&719&	\num{18 +- 4} \\
+    50.0    	&40 	&601&	\num{15 +- 4} \\
+    60.0	&40 	&328&	\num{8 +- 3} \\
     \bottomrule
   \end{tabular}
   \caption{Aktivität nach Abschirmung durch Kupfer}
@@ -116,56 +116,56 @@ und die Anfangsaktivität bestimmt über die Kupferabschirmung von
   \caption{Zählrate in Abhängigkeit der Abschirmung durch Kupfer}
   \label{fig:Kupfer}
 \end{figure}
-Der unter verwendung des Molvolumens von 7.11 (\cite{Kupfer}) berechnete theoretische Compton-Absorptionskoeffizient beträgt 
+Der unter verwendung des Molvolumens von 7.11 (\cite{Kupfer}) berechnete theoretische Compton-Absorptionskoeffizient beträgt
 \begin{equation}
   \nu_\text{comp} = 61.89 \frac{1}{m} \ .
   \label{eqn:Kc}
 \end{equation}
 \subsection{\texorpdfstring{$\beta$ -Strahlung }%
                                {beta -Strahlung}}
-Die Hintergrundstrahlung des $\beta$-Strahlungsversuch beträgt 
+Die Hintergrundstrahlung des $\beta$-Strahlungsversuch beträgt
 \begin{equation}
   (\num{248 +- 15}) \text{ cps in } 900 \text{s}
   \label{eqn:hintb}
 \end{equation}
-woraus sich eine Hintergrundaktivität von 
+woraus sich eine Hintergrundaktivität von
 \begin{equation}
   (\num{0.275 +- 0.004}) \frac{1}{s}
   \label{eqn:HAB}
-\end{equation} 
-berechnet. Diese wird im weiteren Verlauf von den berechneten Aktivitäten abgezogen. Die gemessenen Zählraten zu den enstprechenden Dicken, sowie die berechneten Aktivitäten sind in Tabelle \ref{tab:AAlu} aufgelistet. 
+\end{equation}
+berechnet. Diese wird im weiteren Verlauf von den berechneten Aktivitäten abgezogen. Die gemessenen Zählraten zu den enstprechenden Dicken, sowie die berechneten Aktivitäten sind in Tabelle \ref{tab:AAlu} aufgelistet.
 \begin{table}
   \centering
   \begin{tabular}{c c c c}
     \toprule
     Dicke d / $10^{-6}$ m & Zeit t / s & Zählrate N & Aktivität A / $\frac{1}{s}$ \\
     \midrule
-    102&	40 &	1374&	\num{34 +-6 } \\	
-    126&	40 &	719&	\num{18 +-4 } \\	
-    153&	40 &	297&	\num{7 +-3 } \\	
-    160&	80 &	360&	\num{5 +-2 } \\	
-    200&	150&	275&	\num{2 +-1 } \\	
-    253&	450&	268&	\num{0.6 +-0.8 } \\	
-    302&	600&	319&	\num{0.5 +-0.7 } \\	
-    338&	650&	336&	\num{0.5 +-0.7 } \\	
-    400&	650&	355&	\num{0.5 +-0.7 } \\	
-    444&	600&	315&	\num{0.5 +-0.7 } \\	
-    482&	600&	340&	\num{0.6 +-0.8 } \\	
+    102&	40 &	1374&	\num{34 +-6 } \\
+    126&	40 &	719&	\num{18 +-4 } \\
+    153&	40 &	297&	\num{7 +-3 } \\
+    160&	80 &	360&	\num{5 +-2 } \\
+    200&	150&	275&	\num{2 +-1 } \\
+    253&	450&	268&	\num{0.6 +-0.8 } \\
+    302&	600&	319&	\num{0.5 +-0.7 } \\
+    338&	650&	336&	\num{0.5 +-0.7 } \\
+    400&	650&	355&	\num{0.5 +-0.7 } \\
+    444&	600&	315&	\num{0.5 +-0.7 } \\
+    482&	600&	340&	\num{0.6 +-0.8 } \\
     \bottomrule
   \end{tabular}
   \caption{Aktivität nach Abschirmung durch Aluminium}
   \label{tab:AAlu}
 \end{table}
-In dem Diagramm \ref{fig:Alu} wird die Massenbelgung gegen die Zählrate aufgetragen. 
+In dem Diagramm \ref{fig:Alu} wird die Massenbelgung gegen die Zählrate aufgetragen.
 \begin{figure}
   \centering
   \includegraphics[height=8cm]{Aluminium.pdf}
   \caption{Ausgleichungsrechnung zur Bestimmung der Gesamtenergie}
   \label{fig:Alu}
 \end{figure}
-Mittels dem Schnittpunkt von zwei Linearen Fitts der From \eqref{eqn:fit} wird die Maximale Massenbelgeung berechnet. Sie beträgt 
+Mittels dem Schnittpunkt von zwei Linearen Fitts der From \eqref{eqn:fit} wird die Maximale Massenbelgeung berechnet. Sie beträgt
 \begin{equation}
-  R_\text{Max} = \num{0.65 +- 0.07} \, \frac{\text{kg}}{\text{m}^2} \ . 
+  R_\text{Max} = \num{0.65 +- 0.07} \, \frac{\text{kg}}{\text{m}^2} \ .
   \label{eqn:Rmax}
 \end{equation}
 Aus der Maximalen Massenbelgung wird die freiwerdende Gesamtenergie mittels Formel \eqref{eqn:} berechnet und beträgt
