--- a/22-21.Juni/content/theorie.tex
+++ b/22-21.Juni/content/theorie.tex
@@ -4,7 +4,7 @@ In diesem Versuch wird die Maximalenergie eines $\beta$-Strahlers bestimmt und d
 
 \section{Theoretische Grundlage}
 \label{sec:Theorie}
-Die Photonen der $\gamma$-Strahlung und die Elektronen der $\beta$-Strahlung wechelwirken nur mit Materie, wenn die Teilchen der Strahlung direkt auf ein Elektron oder Atomkern der Materie treffen. Da Materie zum großen Teil aus Freiraum besteht, wird ein Wirkungsquerschnitt $\sigma$ definiert. Allerdings ist der Wirkungsquerschnitt keine geometrisch messbare Größe, sondern eine Wahrscheinlichkeit mit der die Teilchen wechselwirken. Die Anzahl der Wechselwirkungen sind trotzdem von der Dicke $D$ des Absorbers abhängig, als Absorber wird hier das absorbierende Material bezeichnet. Für die $\gamma$-Strahlung gilt ein exponentieller Abfall der Strahlungsintensität, je dicker der Absorber ist:
+Die Photonen der $\gamma$-Strahlung und die Elektronen der $\beta$-Strahlung wechselwirken nur mit Materie, wenn die Teilchen der Strahlung direkt auf ein Elektron oder Atomkern der Materie treffen. Da Materie zum großen Teil aus Freiraum besteht, wird ein Wirkungsquerschnitt $\sigma$ definiert. Allerdings ist der Wirkungsquerschnitt keine geometrisch messbare Größe, sondern eine Wahrscheinlichkeit mit der die Teilchen wechselwirken. Die Anzahl der Wechselwirkungen sind trotzdem von der Dicke $D$ des Absorbers abhängig, als Absorber wird hier das absorbierende Material bezeichnet. Für die $\gamma$-Strahlung gilt ein exponentieller Abfall der Strahlungsintensität:
 \begin{equation}
 	N(D) = N_0 \cdot e^{-n\,\sigma\,D} \ .
 	\label{eqn:N}
@@ -19,7 +19,7 @@ mit der Avogadro-Konstante $N_\text{A}$, der Ordnungszahl $z$, sowie dem Molekul
 
 \subsection{Eigenschaften von \texorpdfstring{$\gamma$}{}-Strahlung}
 $\gamma$-Strahlung entsteht, wenn ein angeregter Atomkern mindestens ein Energieniveau nach unten fällt. Die Energieniveaus in einem Atom besitzten diskrete Zustände, daraus ergibt sich, dass die $\gamma$-Strahlung ein diskretes Linienspektrum hat. Da die Strahlung aus Photonen besteht, breitet sie sich mit Lichtgeschwindigkeit aus und weist die typischen Eigenschaften einer elektromagnetischen Welle, wie etwa Interferenz, auf. \\
-Die $\gamma$-Strahlung wird durch unterschieliche Effekte von der Materie absorbiert. Diese Effekte sind in der nachfolgenden Abbildung (Abb. \eqref{tab:Wechselwirkungen}) aufgelistet.
+Die $\gamma$-Strahlung wird durch unterschiedliche Effekte von der Materie absorbiert. Diese Effekte sind in der nachfolgenden Abbildung (Abb. \eqref{fig:Wechselwirkungen}) aufgelistet.
 
 \begin{figure}[H]
 	\centering
