--- a/22-21.Juni/main.tex
+++ b/22-21.Juni/main.tex
@@ -1,7 +1,7 @@
 \input{header.tex}
 
 \subject{Versuch 704}
-\title{Absorbtion von gamma- und beta-Strahlung}
+\title{Absorbtion von \texorpdfstring{$\gamma$}{}- und \texorpdfstring{$\beta$}{}-Strahlung}
 \date{
   Durchführung: 21.06.16
   \hspace{3em}
