--- a/23-28.Juni/content/theorie.tex
+++ b/23-28.Juni/content/theorie.tex
@@ -21,7 +21,7 @@ zu erwarten. Die Reichweite von $\alpha$-Strahlung weist einen proportionalen Zu
   x = x_0 \frac{p}{p_0}
   \label{eqn:laenge}
 \end{equation}
-eingeführt welche die Reichweite $x$ der Alphastrahlung entsprechend des normaldrucks $p_0$ berechnet. 
+eingeführt welche die Reichweite $x$ der $\alpha$-Strahlung entsprechend des Normaldrucks $p_0$ berechnet. 
 \subsection{Fehlerrechnung}
 Sämtliche Fehlerrechnungen werden mit Hilfe von Python 3.4.3 durchgeführt.
 \subsubsection{Mittelwert}
