--- a/22-21.Juni/content/auswertung.tex
+++ b/22-21.Juni/content/auswertung.tex
@@ -7,7 +7,7 @@ Die Nullmessung ohne radioaktives Präperat ergibt eine Hintergrundstrahlung von
   (\num{800 +- 30}) \text{ counts in } 900 \text{s} \ .
   \label{eqn:gammacoun}
 \end{equation}
-Normiert man diese Impulszahl auf die Zählrate ergibt sich die Nullaktivität $A_0$ von
+Normiert man diese Impulszahl auf die Zählrate ergibt sich die Hintergrundzählrate $A_0$ von
 \begin{equation}
   A_0 = (\num{0.89 +- 0.03}) \, \text{cps} \ .
   \label{eqn:A0}
@@ -17,31 +17,31 @@ Im weiteren Verlauf wird von den gemessenenen Messwerten die Hintergrundzählrat
   \centering
   \begin{tabular}{c c c c}
     \toprule
-    Dicke d / $10^{-3}$ m & Zeit t / s & Zählrate N & Aktivität A / $\frac{1}{s}$ \\
+    Dicke d / $10^{-3}$ m & Zeit t / s & Impulszahl N & Aktivität A / $\frac{1}{s}$ \\
     \midrule
-    	1.2	&40 	&5276	&\num{130 +- 10} 	\\
-	2.4	&40 	&4776	&\num{120 +- 10}	\\
-	3.6	&40 	&4259	&\num{100 +- 10}	\\
-	10.0	&40 	&1907	&\num{48 +- 7}	\\
-	11.2	&40 	&1811	&\num{45 +- 7}	\\
-	12.4	&40 	&1644	&\num{41 +- 6}	\\
-	13.6	&40 	&1479	&\num{37 +- 6}	\\
-	20.0	&40 	&707	&\num{18 +- 4}	\\
-	21.2	&40 	&624	&\num{16 +- 4}	\\
-	22.4	&40 	&598	&\num{15 +- 4}	\\
-	23.4	&40 	&543	&\num{14 +- 4}	\\
-	30.0	&40 	&280	&\num{7 +- 3}	\\
-	40.0	&100	&292	&\num{3 +- 2}	\\
-	50.0	&200	&294	&\num{1 +- 1}	\\
-	60.0	&250	&304	&\num{1 +- 1}	\\
+    	1.2	&40 	&5276	&\num{132 +- 2} 	\\
+	2.4	&40 	&4776	&\num{119 +- 2}	\\
+	3.6	&40 	&4259	&\num{106 +- 2}	\\
+	10.0	&40 	&1907	&\num{48 +- 1}	\\
+	11.2	&40 	&1811	&\num{45 +- 1}	\\
+	12.4	&40 	&1644	&\num{41 +- 1}	\\
+	13.6	&40 	&1479	&\num{37 +- 1}	\\
+	20.0	&40 	&707	&\num{18 +- 1}	\\
+	21.2	&40 	&624	&\num{16 +- 1}	\\
+	22.4	&40 	&598	&\num{15 +- 1}	\\
+	23.4	&40 	&543	&\num{14 +- 1}	\\
+	30.0	&40 	&280	&\num{7.0 +- 0.4}	\\
+	40.0	&100	&292	&\num{2.9 +- 0.2}	\\
+	50.0	&200	&294	&\num{1.5 +- 0.2}	\\
+	60.0	&250	&304	&\num{1.2 +- 0.1}	\\
     \bottomrule
   \end{tabular}
   \caption{Aktivität nach Abschirmung durch Blei}
   \label{tab:ABlei}
 \end{table}
-In Diagramm \ref{fig:Blei} wird die Massenbelegung auf der x-Achse gegen die Zählrate auf der logarithmierten y-Achse aufgetragen. Anhand eines Fittes der Form
+In Diagramm \ref{fig:Blei} wird die Dicke auf der x-Achse gegen die Zählrate auf der logarithmierten y-Achse aufgetragen. Anhand eines Fittes der Form
 \begin{equation}
-  y_\text{fit} = \text{exp}(a \cdot x + b)
+  y_\text{fit} = \text{exp}(\mu \cdot x + b)
   \label{eqn:fit}
 \end{equation}
 wird ein Absorbtionskoeffizient µ von
@@ -51,7 +51,7 @@ wird ein Absorbtionskoeffizient µ von
 \end{equation}
 ermittelt so wie eine Anfangsaktivität $N(0)$ von
 \begin{equation}
-  N_\text{Blei}(0) = \num{148 +- 6} \ .
+  N_\text{Blei}(0) = \num{148 +- 6} \, \frac{1}{\text{s}} \ .
   \label{eqn:NBlei}
 \end{equation}
 \begin{figure}
@@ -71,30 +71,30 @@ Die gemessenen Werte für Kupfer und die Zählrate sind in Tabelle \ref{tab:AKup
   \centering
   \begin{tabular}{c c c c}
     \toprule
-    Dicke d / $10^{-3}$ m & Zeit t / s & Zählrate N & Aktivität A / $\frac{1}{s}$ \\
+    Dicke d / $10^{-3}$ m & Zeit t / s & Impulszahl N & Aktivität A / $\frac{1}{s}$ \\
     \midrule
-    0.5		&40	&5484&	\num{140 +- 10} \\
-    1.0		&40	&5459&	\num{140 +- 10} \\
-    1.5		&40	&5314&	\num{130 +- 10} \\
-    2.0		&40	&4413&	\num{110 +- 10} \\
-    2.5		&40	&5168&	\num{130 +- 10} \\
-    3.1		&40	&4982&	\num{120 +- 10} \\
-    3.6		&40	&4682&	\num{120 +- 10} \\
-    4.1		&40	&4351&	\num{110 +- 10} \\
-    5.0		&40	&4498&	\num{110 +- 10} \\
-    5.5		&40	&4165&	\num{100 +- 10} \\
-    6.0		&40	&4383&	\num{110 +- 10} \\
-    6.5		&40	&4192&	\num{100 +- 10} \\
-    7.0		&40	&4444&	\num{110 +- 10} \\
-    8.1		&40	&4169&	\num{100 +- 10} \\
-    10.0	&40	&3475&	\num{90 +- 10} \\
-    13.1	&40 	&2784&	\num{70 +- 9} \\
-    18.1	&40	&2183&	\num{55 +- 8} \\
-    20.0	&40	&2246&	\num{56 +- 7} \\
-    30.0	&40 	&1319&	\num{34 +- 6} \\
-    40.0    	&40 	&719&	\num{18 +- 4} \\
-    50.0    	&40 	&601&	\num{15 +- 4} \\
-    60.0	&40 	&328&	\num{8 +- 3} \\
+    0.5		&40	&5484&	\num{137 +- 2} \\
+    1.0		&40	&5459&	\num{136 +- 2} \\
+    1.5		&40	&5314&	\num{133 +- 2} \\
+    2.0		&40	&4413&	\num{110 +- 2} \\
+    2.5		&40	&5168&	\num{129 +- 2} \\
+    3.1		&40	&4982&	\num{125 +- 2} \\
+    3.6		&40	&4682&	\num{117 +- 2} \\
+    4.1		&40	&4351&	\num{108 +- 2} \\
+    5.0		&40	&4498&	\num{112 +- 2} \\
+    5.5		&40	&4165&	\num{104 +- 2} \\
+    6.0		&40	&4383&	\num{110 +- 2} \\
+    6.5		&40	&4192&	\num{105 +- 2} \\
+    7.0		&40	&4444&	\num{105 +- 2} \\
+    8.1		&40	&4169&	\num{104 +- 2} \\
+    10.0	&40	&3475&	\num{90 +- 1} \\
+    13.1	&40 	&2784&	\num{70 +- 1} \\
+    18.1	&40	&2183&	\num{55 +- 1} \\
+    20.0	&40	&2246&	\num{56 +- 1} \\
+    30.0	&40 	&1319&	\num{34 +- 1} \\
+    40.0    	&40 	&719&	\num{18 +- 1} \\
+    50.0    	&40 	&601&	\num{15 +- 1} \\
+    60.0	&40 	&328&	\num{8 +- 1} \\
     \bottomrule
   \end{tabular}
   \caption{Aktivität nach Abschirmung durch Kupfer}
@@ -116,7 +116,7 @@ und die Anfangsaktivität bestimmt über die Kupferabschirmung von
   \caption{Zählrate in Abhängigkeit der Abschirmung durch Kupfer}
   \label{fig:Kupfer}
 \end{figure}
-Der unter verwendung des Molvolumens von 7.11 (\cite{Kupfer}) berechnete theoretische Compton-Absorptionskoeffizient beträgt
+Der unter verwendung des Molvolumens von 7.11 $\text{m}^3 / $mol (\cite{Kupfer}) berechnete theoretische Compton-Absorptionskoeffizient beträgt
 \begin{equation}
   \nu_\text{comp} = 61.89 \frac{1}{m} \ .
   \label{eqn:Kc}
@@ -138,19 +138,19 @@ berechnet. Diese wird im weiteren Verlauf von den berechneten Aktivitäten abgez
   \centering
   \begin{tabular}{c c c c}
     \toprule
-    Dicke d / $10^{-6}$ m & Zeit t / s & Zählrate N & Aktivität A / $\frac{1}{s}$ \\
+    Dicke d / $10^{-6}$ m & Zeit t / s & Impulszahl N & Aktivität A / $\frac{1}{s}$ \\
     \midrule
-    102&	40 &	1374&	\num{34 +-6 } \\
-    126&	40 &	719&	\num{18 +-4 } \\
-    153&	40 &	297&	\num{7 +-3 } \\
-    160&	80 &	360&	\num{5 +-2 } \\
-    200&	150&	275&	\num{2 +-1 } \\
-    253&	450&	268&	\num{0.6 +-0.8 } \\
-    302&	600&	319&	\num{0.5 +-0.7 } \\
-    338&	650&	336&	\num{0.5 +-0.7 } \\
-    400&	650&	355&	\num{0.5 +-0.7 } \\
-    444&	600&	315&	\num{0.5 +-0.7 } \\
-    482&	600&	340&	\num{0.6 +-0.8 } \\
+    102&	40 &	1374&	\num{34 +-1 } \\
+    126&	40 &	719&	\num{18 +-1 } \\
+    153&	40 &	297&	\num{7.4 +- 0.4 } \\
+    160&	80 &	360&	\num{4.5 +- 0.2 } \\
+    200&	150&	275&	\num{1.8 +- 0.1 } \\
+    253&	450&	268&	\num{0.60 +-0.03 } \\
+    302&	600&	319&	\num{0.53 +-0.03 } \\
+    338&	650&	336&	\num{0.52 +-0.03 } \\
+    400&	650&	355&	\num{0.54 +-0.03 } \\
+    444&	600&	315&	\num{0.53 +-0.03} \\
+    482&	600&	340&	\num{0.57 +-0.03 } \\
     \bottomrule
   \end{tabular}
   \caption{Aktivität nach Abschirmung durch Aluminium}
@@ -163,7 +163,7 @@ In dem Diagramm \ref{fig:Alu} wird die Massenbelgung gegen die Zählrate aufgetr
   \caption{Ausgleichungsrechnung zur Bestimmung der Gesamtenergie}
   \label{fig:Alu}
 \end{figure}
-Mittels dem Schnittpunkt von zwei Linearen Fitts der From \eqref{eqn:fit} wird die Maximale Massenbelgeung berechnet. Sie beträgt
+Mittels dem Schnittpunkt von zwei exponentiellen Fitts der From \eqref{eqn:fit} wird die Maximale Massenbelgeung berechnet. Sie beträgt
 \begin{equation}
   R_\text{Max} = \num{0.65 +- 0.07} \, \frac{\text{kg}}{\text{m}^2} \ .
   \label{eqn:Rmax}
