--- a/22-21.Juni/content/theorie.tex
+++ b/22-21.Juni/content/theorie.tex
@@ -4,7 +4,7 @@ In diesem Versuch wird die Maximalenergie eines $\beta$-Strahlers bestimmt und d
 
 \section{Theoretische Grundlage}
 \label{sec:Theorie}
-Die Photonen der $\gamma$-Strahlung und die Elektronen der $\beta$-Strahlung wechselwirken nur mit Materie, wenn die Teilchen der Strahlung direkt auf ein Elektron oder Atomkern der Materie treffen. Da Materie zum großen Teil aus Freiraum besteht, wird ein Wirkungsquerschnitt $\sigma$ definiert. Allerdings ist der Wirkungsquerschnitt keine geometrisch messbare Größe, sondern eine Wahrscheinlichkeit mit der die Teilchen wechselwirken. Die Anzahl der Wechselwirkungen sind trotzdem von der Dicke $D$ des Absorbers abhängig, als Absorber wird hier das absorbierende Material bezeichnet. Für die $\gamma$-Strahlung gilt ein exponentieller Abfall der Strahlungsintensität:
+Die Photonen der $\gamma$-Strahlung und die Elektronen der $\beta$-Strahlung wechselwirken nicht nur mit Materie, wenn die Teilchen der Strahlung direkt auf ein Elektron oder Atomkern der Materie treffen, sondern es treten zahlreiche weitere Wechselwirkungen auf. Da Materie zum großen Teil aus Freiraum besteht, wird ein Wirkungsquerschnitt $\sigma$ definiert. Allerdings ist der Wirkungsquerschnitt keine geometrisch messbare Größe, sondern eine Wahrscheinlichkeit mit der die Teilchen wechselwirken. Die Anzahl der Wechselwirkungen sind trotzdem von der Dicke $D$ des Absorbers abhängig, als Absorber wird hier das absorbierende Material bezeichnet. Für die $\gamma$-Strahlung gilt ein exponentieller Abfall der Strahlungsintensität:
 \begin{equation}
 	N(D) = N_0 \cdot e^{-n\,\sigma\,D} \ .
 	\label{eqn:N}
@@ -40,7 +40,7 @@ Der klassische Elektronenradius beträgt $r_\text{e} = 2.82 \cdot 10^{-15}$\,m u
 	\varepsilon = \frac{E_\gamma}{E_0}
 	\label{eqn:VarE}
 \end{equation}
-Die \textbf{Paarbildung} tritt auf, sobald die Energie der Photonen mindestens doppelt so hoch, wie die Ruheenergie der Elektronen ist. Dabei wird das Photon annihiliert und es entsehen ein Positron und ein Elektron. \\
+Die \textbf{Paarbildung} tritt auf, sobald die Energie der Photonen mindestens doppelt so hoch, wie die Ruheenergie der Elektronen ist. Dabei wird das Photon annihiliert und es entsehen ein Positron und ein Elektron, jedoch ist der Effekt nur im Columbfeld von Atomen zu beobachten.\\
 In Abbildung \eqref{fig:Absorbtionskoeffizient} ist zu sehen, dass der Photo-Effekt für die niedrigen Energiebereiche und die Paarbildung für die hohen Energiebereiche ausschlaggebend sind. Der Compton-Effekt sorgt für eine Angleichung im mittleren Energiebereich.
 
 \begin{figure}[H]
